--- a/src/components/App.css
+++ b/src/components/App.css
@@ -52,3 +52,33 @@ button[type='button-clear'] {
   padding: 5px;
   font-weight: 700;
 }
+.sales-colum {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+}
+.sales-column {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-right: 30px;
+  border: 1px solid black;
+  border-radius: 20px;
+  background-color: lemonchiffon;
+}
+.services-column {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+
+  border: 1px solid black;
+  border-radius: 20px;
+  background-color: lemonchiffon;
+}
