--- a/src/components/App.css
+++ b/src/components/App.css
@@ -66,7 +66,7 @@ button[type='button-clear'] {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   margin-right: 30px;
   border: 2px solid black;
   border-radius: 20px;
@@ -76,7 +76,7 @@ button[type='button-clear'] {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 
   border: 2px solid black;
   border-radius: 20px;
